--- a/_blocks/b21.md
+++ b/_blocks/b21.md
@@ -1,3 +1,3 @@
 ---
 ---
-Это пример блока для редактирования контента
+Р­С‚Рѕ РїСЂРёРјРµСЂ Р±Р»РѕРєР° РґР»СЏ СЂРµРґР°РєС‚РёСЂРѕРІР°РЅРёСЏ РєРѕРЅС‚РµРЅС‚Р°
