--- a/_blocks/b10.md
+++ b/_blocks/b10.md
@@ -1,4 +1,4 @@
 ---
 ---
-<img src="/assets/img/b10.jpg">
-(http://protechek.net.ru/ "успей купить")
+<img src="/assets/img/b10.jpg"http://protechek.net.ru/>
+("успей купить")
