--- a/v2/4.0_info.md
+++ b/v2/4.0_info.md
@@ -52,7 +52,7 @@ submenu: false
 
 ## Какие документы получаем по окончанию обследования
 Заключение:
-Техническое заключение составляется согласно ГОСТ 31937-2011. {% link bufer6.1.4.1.md %} (ссылка на Буфер № 6.1.4.1.) 
+Техническое заключение составляется согласно ГОСТ 31937-2011. <-- {% link bufer6.1.4.1.md %} --> (ссылка на Буфер № 6.1.4.1.) 
 В которые входят данные осмотра, фото и видео материалы.
 В заключении будут отображены выявленные дефекты. 
 К заключению прилагаются рекомендации по устранению выявленных дефектов.
