--- a/v2/3.0_safety.md
+++ b/v2/3.0_safety.md
@@ -18,7 +18,7 @@ submenu: true
 - жесткие вертикальные анкерные линии 
 - анкерные точки 
 - анкерные столбы 
-Разработаны собственным конструкторским отделом HIGH SAFETY. Производятся из антистатичных материалов, что позволяет применять их во взрывоопасной среде. Анкерные линии рассчитаны на количество пользователей от 1-го до 7-и, в зависимости от типа устройства, анкерные точки - от 1-го до 3-х. Ассортимент анкерных линий, столбов и точек HIGH SAFETY позволяет организовать страховочную систему на любой рабочей площадке. Все анкерные линии испытаны по ГОСТ EN/TS 16415-2015  {% link bufer6.3.1.md %} "Средства индивидуальной защиты от падения с высоты. Анкерные устройства для использования более чем одним человеком одновременно.
+Разработаны собственным конструкторским отделом HIGH SAFETY. Производятся из антистатичных материалов, что позволяет применять их во взрывоопасной среде. Анкерные линии рассчитаны на количество пользователей от 1-го до 7-и, в зависимости от типа устройства, анкерные точки - от 1-го до 3-х. Ассортимент анкерных линий, столбов и точек HIGH SAFETY позволяет организовать страховочную систему на любой рабочей площадке. Все анкерные линии испытаны по ГОСТ EN/TS 16415-2015  <-- {% link bufer6.3.1.md %} --> "Средства индивидуальной защиты от падения с высоты. Анкерные устройства для использования более чем одним человеком одновременно.
 1. Анкерная линия GALEREYA (Двухтросовая горизонтальная гибкая анкерная линия)
 2. Анкерная линия GORIZONT (Горизонтальная гибкая анкерная линия)
 3. Анкерная линия MOST (Горизонтальная жесткая анкерная линия)
