--- a/v2/1.0_survey.md
+++ b/v2/1.0_survey.md
@@ -7,7 +7,7 @@ submenu: true
 ---
 
 Высотное обследование – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
-Мы специализируемся на проектировании безопасных систем доступа на высоте {% link safety.md %} и в труднодоступных местах, будь то канатные системы доступа для обслуживания и ремонта на возвышенности или преодоление ограничений доступа для ограниченного пространства на заводах и связанном с ними оборудовании.
+Мы специализируемся на проектировании безопасных систем доступа на высоте <!-- {% link safety.md %} --> и в труднодоступных местах, будь то канатные системы доступа для обслуживания и ремонта на возвышенности или преодоление ограничений доступа для ограниченного пространства на заводах и связанном с ними оборудовании.
  
 Обследование — Один из видов проверки качества строительной деятельности, базирующийся на инструментальном анализе и сопоставлении данных существующей нормативной, проектной документации. 
 Мы проводим обследование жилых, гражданских и промышленных объектов недвижимости, а также представляющих культурно-историческую ценность.
@@ -22,4 +22,4 @@ submenu: true
 
 {% include profequip.md %}
 
-По результатам проведенных комплексных изыскания Вы получаете строительный технический отчет {% link 1.4_Tech_conclus.md %} с подробным описание обнаруженных дефектов.
+По результатам проведенных комплексных изыскания Вы получаете строительный технический отчет <!-- {% link 1.4_Tech_conclus.md %} --> с подробным описание обнаруженных дефектов.
