--- a/v2/1.0_survey.md
+++ b/v2/1.0_survey.md
@@ -20,6 +20,6 @@ submenu: true
 - необходимость модернизации, переустройства здания.
 - необходимость возобновления строительства законсервированного объекта.
 
-{% include profequip.md %}
+<!-- {% include profequip.md %} -->
 
 По результатам проведенных комплексных изыскания Вы получаете строительный технический отчет <!-- {% link 1.4_Tech_conclus.md %} --> с подробным описание обнаруженных дефектов.
