--- a/v2/1.0_survey.md
+++ b/v2/1.0_survey.md
@@ -25,5 +25,5 @@ submenu: true
 
 
 По результатам проведенных комплексных изыскания Вы получаете строительный технический отчет 
-<!-- {% link v2/1.4_tech_conclus.md %} --> 
+<!-- {% link 1.4_tech_conclus.md %} --> 
 с подробным описание обнаруженных дефектов.
