--- a/v2/1.0_survey.md
+++ b/v2/1.0_survey.md
@@ -25,5 +25,5 @@ submenu: true
 
 
 По результатам проведенных комплексных изыскания Вы получаете строительный технический отчет 
- {% link index.md %} 
+ {% link v2/index.md %} 
 с подробным описание обнаруженных дефектов.
