--- a/v2/1.0_survey.md
+++ b/v2/1.0_survey.md
@@ -7,9 +7,10 @@ submenu: true
 ---
 
 Высотное обследование – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
-Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах, будь то канатные системы доступа для обслуживания и ремонта на возвышенности или преодоление ограничений доступа для ограниченного пространства на заводах и связанном с ними оборудовании.
+Мы специализируемся на проектировании [безопасных систем доступа на высоте]({% link v2/3.0_safety.md %}) и в труднодоступных местах, будь то канатные системы доступа для обслуживания и ремонта на возвышенности или преодоление ограничений доступа для ограниченного пространства на заводах и связанном с ними оборудовании.
 
 Обследование — Один из видов проверки качества строительной деятельности, базирующийся на инструментальном анализе и сопоставлении данных существующей нормативной, проектной документации. 
+
 Мы проводим обследование жилых, гражданских и промышленных объектов недвижимости, а также представляющих культурно-историческую ценность.
 Результатом данного анализа является заключение, в котором отображены выявленные дефекты.
 
