--- a/v2/1.1_facades.md
+++ b/v2/1.1_facades.md
@@ -5,7 +5,7 @@ sortid: 1.1
 submenu: true
 ---
 
-1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению . 
+1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
 2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ. 
     - Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).
     - Обследование межпанельных швов в панельных зданиях.
@@ -17,7 +17,7 @@ submenu: true
 - б) необходимость экспертизы при обнаружении деформации, трещин, разрушения элементов фасада.
 - в) необходимость проведения капитального, локального, текущего ремонта.
 
-Что диагностируем.
+### Что диагностируем.
 - Неразрушающий контроль бетона Ультразвуковой метод определяем: глубины и размера трещин; качества бетонирования; возможных дефектов. Наличие пустот в бетоне или в штукатурном слое. 
 - Обнаружение коррозии (ржавчина, окисел, патина)
 - Состояние теплоизоляции на теплопотери.
@@ -27,7 +27,7 @@ submenu: true
 - Состояние пассивной и активной молниезащиты. 
 - Наличие трещин в металлоконструкциях.  
 - Состояние защитных покрытий, толщины.( гидроизоляционные, теплоизоляционные, звукопоглащающие, светопоглащающие, светопропускающие.)
-- Состояние анкерных креплений, мачтовых канатов оттяжек (на наличие коррозии, прочность соединения).
+- Состояние анкерных креплений, мачтовых канатов оттяжек (на наличие коррозии, прочность соединения)
 
 
 
