--- a/v2/1.4_Tech_conclus.md
+++ b/v2/1.4_Tech_conclus.md
@@ -4,3 +4,81 @@ cat: 1
 sortid: 1.4
 submenu: true
 ---
+
+Заключения, представляет собой комплекс работ по выявлению критических замечаний, достоверности указанной информации, представленных в исследовательской части, а также написания заключения и проверки полноты его содержания согласно требованиям.
+
+После исследования мы составляем техническое заключение, которое включает в себя следующие документы:
+
+По результатам обследования составляется отчет о техническом состоянии.
+В соответствии с ГОСТ 31937-2011 "Здания и сооружения". (ссылка на Буфер № 6.1.4.1.) Правила обследования и мониторинга технического состояния" существует 4 категории технического состояния строительных конструкций:
+Нормативное техническое состояние.
+Работоспособное техническое состояние.
+Ограниченно-работоспособное техническое состояние.
+Аварийное состояние.
+
+Что входит в технический отчет, полученный в результате обследования здания:
+Технический отчет по результатам обследования здания
+Отчет технического обследования состоит из текстовой части, фотографий, графического материала и приложений, и содержит следующие разделы:
+
+1. Титульный лист
+Титульный лист включает
+полное название отчетного документа, наименование объекта обследования и его месторасположение, наименование специализированной организации, выполняющей работу, и номер Свидетельства СРО с допуском на данный вид работ, год выполненной работы, утверждение руководителем специализированной организации.
+2. Введение
+Раздел «Введение» содержит:
+    2.1. обоснование, сведения об организации, проводящей техническое обследование; данные о заказчике; данные об эксплуатирующей организации;
+    2.2. копии документов на право проведения работ
+    2.3. техническое задание - согласовывается с заказчиком, в нем прописаны все цели и задачи обследования;
+    2.4. программа обследования - согласовывается с заказчиком, в нем описаны этапы проведения работ по обследованию;
+    2.5. руководящая научно-техническая документация - перечень ГОСТов, СП и СНиПов, использованных при обследовании;
+    2.6. состав специалистов - перечень специалистов, которые производили обследования, и их квалификация;
+    2.7. перечень приборов и оборудования - со сведениями о поверке этих приборов и оборудования.
+3. Анализ технической документации
+В разделе «Анализ технической документации» приводятся данные о наличии/отсутствии проектной технической документации на данное здание (сооружение), сведения о проектной, строительной организациях, паспорта БТИ, результатов предыдущих обследований и т.п.
+4. Результаты обследования конструкций
+    4.1. Общие данные по обследованию
+    В разделе приводится описание этапов работ:
+    предварительное (визуальное) обследование,
+    детальное (инструментальное) обследование,
+    а также описание состава работ.
+    4.2. Результаты визуального обследования.
+    В разделе дается описание визуального обследования, выявляются дефекты и повреждения по внешним признакам, дается предварительная оценка технического состояния строительных конструкций.
+    4.3. Результаты детального (инструментального) обследования
+    В данном разделе приводятся:
+        1) фактические размеры между осями основных конструктивных элементов: пролеты, шаги колонн, отметки по высоте, расстояние между узлами;
+        2) планы этажей, разрезы, фасады, план кровли;
+        3) отклонения габаритных размеров сечения и длин конструктивных элементов от проектных;
+        4) фактические прочностные характеристики основных строительных материалов;
+        5) дефекты и повреждения элементов, узлов и схемы их расположения (дефектная ведомость оформляется при необходимости подсчета объемов ремонтных и восстановительных работ).
+        В зависимости от вида строительных конструкций ГОСТ предусматривает проведение определенного ряда работ, которые в каждом конкретном случае определяются целями и задачами обследования и могут отличаться от приведенного выше списка.
+        6) выводы с кратким изложением описания выявленных дефектов и повреждений, причины их появления;
+        7) заключение технического обследования здания (сооружения);
+        8) рекомендации по устранению выявленных дефектов. Указываются рекомендуемые мероприятия по усилению конструкций, устранению дефектов и повреждений, и приведение их в соответствие с требованиями НТД.
+
+4.4. Результаты поверочных расчетов
+В разделе приводятся результаты выполненных поверочных расчетов конструкций и их элементов
+
+4.5. Контроль крена и осадок
+Если при визуальном обследовании видны прогибы, крены, осадки и т.д., то в данном разделе приводятся сведения о результатах замеров этих дефектов геодезическими приборами.
+
+5. Выписка из ГОСТ 31937-2011 "Здания и сооружения. Правила обследования и мониторинга технического состояния"
+В разделе приводится выписка из ГОСТ с перечнем категорий технического состояния строительных конструкций.
+
+6. Заключение о техническом состоянии строительных конструкций
+Оформляется по обязательному Приложению Б ГОСТ 31937-2011"Здания и сооружения. Правила обследования и мониторинга технического состояния".
+В разделе приводится оценка технического состояния строительных конструкций с обоснованием присвоенной категории технического состояния.
+Также в разделе приводятся рекомендации по устранению выявленных дефектов и повреждений, указываются рекомендуемые мероприятия по усилению конструкций, устранению дефектов и повреждений, и приведение их в соответствие с требованиями НТД.
+
+7. Приложения:
+    7.1. Результаты фотосъемки
+    В разделе приводятся фотографии фасадов, кровли, внутренних помещений здания, дефектов и повреждений, шурфов и вскрытий конструкций.
+    7.2. Копии квалификационных удостоверений
+    7.3. Копия лицензии на программные продукты, использованные при поверочных расчетах
+    7.4. Графические материалы
+    В разделе приводятся результаты натурных обмеров фундаментов в шурфах, поэтажные планы, характерные разрезы, схемы измерений, схемы месторасположения дефектов, чертежи фасадов и т.п. в зависимости от целей и задач обследования.
+
+Технический отчет с заключением о техническом состоянии зданий (сооружений) подписывается лицами, проводившими техническое обследование, утверждается руководителем специализированной организации.
+
+По результатам технического обследования зданий (сооружений) разрабатываются мероприятия по устранению выявленных отклонений от требований нормативно-технических документов, требований безопасности и приведению здания (сооружения) в работоспособное состояние.
+
+
+*Отчет формируется на основании технического задания.
