--- a/v2/5.0_contacts.md
+++ b/v2/5.0_contacts.md
@@ -8,14 +8,18 @@ submenu: false
 
 Контакты
 Позвоните нам сейчас, и наши специалисты помогут Вам.
+<address>
 Наши телефоны:
-+7(903)777-77-77 
-+7(916)499-30-60
-(09:00 — 19:00)
-WhatsApp — 
-Skype —
-Instagram — 
-Напишите нам: info@vo.ru
+{% for p in site.data.var.phones %}
+    <a href="tel:{{ p }}">p</a>
+{% endfor %}
+
+{% for s in site.data.var.socials %}
+    {{ s.name }} : {{ s.val }}<br/>
+{% endfor %}
+
+Напишите нам: <a href="mailto:{{ site.data.var.email }}">p</a>
+
 Мы на портале поставщиков- Ссылка
 Физ. адрес: Москва, Большой Власьевский переулок, 14 (подъезд справа от арки)
 Почтовый адрес:
@@ -25,3 +29,29 @@ Instagram —
 СРО-С-265-10042013
 
 Поделиться в соц. сетях
+
+{% include about.md %}
+
+Вид деятельности:
+1.	Инспекция промышленных объектов
+    Мы предоставляем данные для принятия верного решения 
+    Опытная команда доберется до самых труднодоступных мест на вашем объекте и проведет профессиональное обследование на предмет: коррозии, износа, деформации, трещин, качества покрытий и.т.д. Вы получите важную, детализированную информацию, необходимую для планирования ремонтных или иных работ. Тем самым защитите свои активы и минимизируете свои траты.
+    Отчеты инспекции лягут в основу тех задания и сметной документации!
+    В отчете будут отражены какие работы необходимы, что позволяет получить точную оценку от соответствующих сделок; важным фактором, где доступ к ним затруднен.
+
+2.	Проекты
+    Проектируем стационарные страховочные системы.
+    Решаем общие проблемы, такие как диагностик кровель, фасадов и.т.д.
+    Доступ в системы с замкнутым пространством.
+    Разработка систем, для безопасной работы в труднодоступных зонах.
+
+3.	Продажа услуги: (ссылка на страничку: Стационарные страховочные системы от падения с высоты)
+    Выполняем монтаж специализированных систем, а так же временные линии безопасности.
+    Подготовка проекта - Наши специалисты в области безопасности могут обеспечить добавление в проект зданий, конструкций, систем безопасности и обеспечения доступа для ваших сотрудников, когда Вы заранее планируете возможности обслуживания и эксплуатации здания.
+    Согласование проектной документации (ссылка на страницу согласование) — необходимый этап на пути получения разрешения к началу строительных работ на объекте.
+    Любая имеющаяся проектная документация подлежит согласованию, причем порядок согласования разных объектов в государственных структурах может иметь существенные различия. 
+
+Сертификаты: (возможность сформировать сетку из фотосканов)
+Наши партнеры: (банеры, ссылки, описание)
+Архив выполненных работ: (ссылка на архив) (фото архив)
+
