--- a/v2/5.0_contacts.md
+++ b/v2/5.0_contacts.md
@@ -11,7 +11,7 @@ submenu: false
 <address>
 Наши телефоны:
 {% for p in site.data.var.phones %}
-    <a href="tel:{{ p }}">{{ p }}</a>
+    <a href="tel:{{ p }}">p</a>
 {% endfor %}
 
 {% for s in site.data.var.socials %}
@@ -29,7 +29,6 @@ submenu: false
 СРО-С-265-10042013
 
 Поделиться в соц. сетях
-</address>
 
 {% include about.md %}
 
