--- a/v2/5.0_contacts.md
+++ b/v2/5.0_contacts.md
@@ -6,27 +6,24 @@ sortid: 5.0
 submenu: false
 ---
 
-Контакты
+## Контакты
 Позвоните нам сейчас, и наши специалисты помогут Вам.
 <address>
 Наши телефоны:
 {% for p in site.data.var.phones %}
-    <a href="tel:{{ p }}">{{ p }}</a>
+    <a href="tel:{{ p }}">{{ p }}</a><br/>
 {% endfor %}
 
 {% for s in site.data.var.socials %}
     {{ s.name }} : {{ s.val }}<br/>
 {% endfor %}
 
-Напишите нам: <a href="mailto:{{ site.data.var.email }}">p</a>
+Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
 
-Мы на портале поставщиков- Ссылка
-Физ. адрес: Москва, Большой Власьевский переулок, 14 (подъезд справа от арки)
-Почтовый адрес:
-121309, Москва, Физкультурный проезд, 3 корп. 1, 37
-
-Регистрационный номер СРО
-СРО-С-265-10042013
+Мы на портале поставщиков- Ссылка <br/>
+Физ. адрес:  {{ site.data.var.address }} <br/>
+Почтовый адрес: {{ site.data.var.mailing }} <br/>
+{{ site.data.var.sro }} <br/>
 
 Поделиться в соц. сетях
 </address>
