--- a/v2/1.4_Tech_conclus.md
+++ b/v2/1.4_Tech_conclus.md
@@ -81,4 +81,5 @@ submenu: true
 По результатам технического обследования зданий (сооружений) разрабатываются мероприятия по устранению выявленных отклонений от требований нормативно-технических документов, требований безопасности и приведению здания (сооружения) в работоспособное состояние.
 
 
-*Отчет формируется на основании технического задания.
+*Отчет формируется на основании технического задания.*
+
