--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -8,7 +8,7 @@ submenu: true
 Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
 1. Нахождение мест протечек мембранной кровли.
-Вашему вниманию предоставляем новейший метод нахождения протечек кровли - [Электро-векторное картирование]({% link v2/6.1.2.0.md %}), который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
+Вашему вниманию предоставляем новейший метод нахождения протечек кровли - [Электро-векторное картирование]({% link 6.1.2.0.md %}), который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия. На сегодняшний день ЭВК - единственный наиболее эффективный способ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
 Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев
 - а) Система эксплуатируемой крыши с зелеными насаждениями.
