--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -11,7 +11,7 @@ submenu: true
    Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.
    Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является ГОСТ 23479-79 (ссылка на Буфер № 6.1.4.1.) «Контроль неразрушающий. Методы оптического вида» и РД 03-606-03. (ссылка на Буфер № 6.1.4.3.)
 
-2. [Электро-векторное картирование]({% link 6.1.2.0.md %}) (вставить фото)
+2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %}) (вставить фото)
  
     Вашему вниманию предоставляем новейший метод нахождения протечек кровли - Электро-векторное картирование, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
     Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
