--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -1,5 +1,5 @@
 ﻿---
-title: Стационарные страховочные системы от падения с высоты
+title: Стационарные страховочные системы 
 cat: 3
 main: true
 sortid: 3.0
