--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ﻿---
-title: 404-Страница не найдена
+title: Страница не найдена
 main: false
 submenu: false
 layout: uni
 ---
-
+<h1 class="uk-heading-xlarge">404</h1>
