--- a/5.0_contacts.md
+++ b/5.0_contacts.md
@@ -8,16 +8,16 @@ submenu: false
 
 Позвоните нам сейчас, и наши специалисты помогут Вам.
 <address>
-Наши телефоны:
+<span uk-icon="receiver"></span> Наши телефоны:
 {% for p in site.data.var.phones %}
     <a href="tel:{{ p }}">{{ p }}</a><br/>
 {% endfor %}
 
 {% for s in site.data.var.socials %}
-    {{ s.name }} : {{ s.val }}<br/>
+    <span uk-icon="{{ s.name | downcase }}"></span>{{ s.name }} : {{ s.val }}<br/>
 {% endfor %}
 
-Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
+<span uk-icon="mail"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
 
 Мы на портале поставщиков- Ссылка <br/>
 Физ. адрес:  {{ site.data.var.address }} <br/>
