--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -6,10 +6,10 @@ sortid: 1.0
 submenu: true
 ---
 
-Высотное обследование – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
+__Высотное обследование__ – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
 Мы специализируемся на проектировании [безопасных систем доступа на высоте]({% link 3.0_safety.md %}) и в труднодоступных местах, будь то канатные системы доступа для обслуживания и ремонта на возвышенности или преодоление ограничений доступа для ограниченного пространства на заводах и связанном с ними оборудовании.
 
-Обследование — Один из видов проверки качества строительной деятельности, базирующийся на инструментальном анализе и сопоставлении данных существующей нормативной, проектной документации. 
+__Обследование__ — Один из видов проверки качества строительной деятельности, базирующийся на инструментальном анализе и сопоставлении данных существующей нормативной, проектной документации. 
 
 Мы проводим обследование жилых, гражданских и промышленных объектов недвижимости, а также представляющих культурно-историческую ценность.
 Результатом данного анализа является заключение, в котором отображены выявленные дефекты.
@@ -22,4 +22,4 @@ submenu: true
 - необходимость возобновления строительства законсервированного объекта.
 
 
-По результатам проведенных комплексных изыскания Вы получаете строительный [технический отчет]({% link 1.4_Tech_conclus.md %}) с подробным описание обнаруженных дефектов.
+По результатам проведенных комплексных изыскания Вы получаете __[технический отчет]({% link 1.4_Tech_conclus.md %})__ с подробным описание обнаруженных дефектов.
