--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -22,4 +22,4 @@ submenu: true
 - необходимость возобновления строительства законсервированного объекта.
 
 
-По результатам проведенных комплексных изыскания Вы получаете строительный [технический отчет]({% link 1.4_Tech_conclus.md %}) с подробным описание обнаруженных дефектов.
+По результатам проведенных комплексных изыскания Вы получаете [технический отчет]({% link 1.4_Tech_conclus.md %}) с подробным описание обнаруженных дефектов.
