--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -33,4 +33,4 @@ __Комплекс по обследованию объектов произво
 
 По результатам проведенных комплексных изыскания Вы получаете __[технический отчет]({% link 1.4_Tech_conclus.md %})__ с подробным описание обнаруженных дефектов.
 
-В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
