--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -5,17 +5,19 @@ sortid: 1.1
 submenu: true
 ---
 
+__Комплекс по обследованию фасада производится в следующих случаях:__  
+ а) Необходимость выполнения регламентированных осмотров фасада.  
+ б) Определение точных объемов предстоящего ремонта.  
+ в) Необходимость экспертизы при обнаружении деформации, трещин, разрушения элементов фасада.  
+ г) Необходимость проведения капитального, локального, текущего ремонта.  
+
+__Вид обследования:__  
 1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
 2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ. 
     - Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).
     - Обследование межпанельных швов в панельных зданиях.
     - Тепловизионное обследование.
  
-Комплекс по обследованию фасада производится в следующих случаях:
-- а) необходимость выполнения регламентированных осмотров фасада.
-- б) Определение точных объемов предстоящего ремонта.
-- б) необходимость экспертизы при обнаружении деформации, трещин, разрушения элементов фасада.
-- в) необходимость проведения капитального, локального, текущего ремонта.
 
 ### Что диагностируем.
 - Неразрушающий контроль бетона Ультразвуковой метод определяем: глубины и размера трещин; качества бетонирования; возможных дефектов. Наличие пустот в бетоне или в штукатурном слое. 
@@ -28,6 +30,27 @@ submenu: true
 - Наличие трещин в металлоконструкциях.  
 - Состояние защитных покрытий, толщины.( гидроизоляционные, теплоизоляционные, звукопоглащающие, светопоглащающие, светопропускающие.)
 - Состояние анкерных креплений, мачтовых канатов оттяжек (на наличие коррозии, прочность соединения)
+
+
+### Что вам даст обследование фасада.  
+1. Достоверную информацию, на основании которой вы будете принимать решения.
+2. Заключение который будет является доказательством, свидетельствующим о наличии / отсутствии интересующих фактических данных в разрешении того или иного вопроса.
+3. Ценную информацию для формирования технического задания.
+4. Контроль выполненных работ. 
+5. Сверку проектной (исполнительной) документации с выполненными работами.
+6. Полученная информация поможет сэкономить ваш бюджет.
+
+#### Какие документы получаем по окончанию обследования.  
+__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  
+* Техническое заключение составляется согласно __ГОСТ 31937-2011.__  
+* В которые входят данные осмотра, фото и видео материалы.  
+* В заключении будут отображены выявленные дефекты.   
+* К заключению прилагаются рекомендации по устранению выявленных дефектов.  
+* На бумажном носителе в 2-х (двух) экземплярах.  
+* В электронном виде (сканировании копия в формате PDF).
+
+___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
+
 
 
 
