--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -1,5 +1,5 @@
 ---
-title: Независимая диагностика кровли
+title: Диагностика кровли
 cat: 1
 sortid: 1.2
 submenu: true
@@ -7,43 +7,77 @@ submenu: true
 
 Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
-1. Нахождение мест протечек мембранной кровли.
-Вашему вниманию предоставляем новейший метод нахождения протечек кровли - [Электро-векторное картирование]({% link 6.1.2.0_evk.md %}), который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
-Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия. На сегодняшний день ЭВК - единственный наиболее эффективный способ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
-Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев
-- а) Система эксплуатируемой крыши с зелеными насаждениями.
-- б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.
-- в) Система неэксплуатируемой инверсионной крыши.
-- г) Система неэксплуатируемой балластной крыши.
-. (ссылка на страницу Буфер 6.1.2.1 ТМПК)
+__1. Нахождение мест протечек мембранной кровли.__  
+ВСТАВИТЬ ФОТО  
+Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.  
+Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.   
+На сегодняшний день __ЭВК - единственный наиболее эффективный способ__ находить повреждения гидроизоляции, прежде чем вода начнет своё разрушительное воздействие.
 
-* Завершающий этап проверки (Карта дефектов на кровле) (ссылка на страницу Буфер 6.1.2.2. ЗЭП)
-* Детектор протечек Buckleys Wet Roof Pro’ (ссылка на страницу Буфер 6.1.2.3. ДП)
+#### [Тестирование мембраны плоской крыши перед укладкой эксплуатирующих слоев]({% link 6.1.2.0_evk.md %})
+ а) Система эксплуатируемой крыши с зелеными насаждениями.  
+ б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.  
+ в) Система неэксплуатируемой инверсионной крыши.  
+ г) Система неэксплуатируемой балластной крыши.  
 
-2. Нахождение мест протечек листовых и мягких кровель. 
-    Визуальное обследование, нахождение причин протечек. Инструментальное обследование, которое выполняется после и на основании визуального осмотра.
 
-3. Качество монтажа кровельных материалов.
+* Завершающий этап проверки [(Карта дефектов на кровле)]({% link 6.1.2.2_final_step.md %})  
+* Детектор протечек [Buckleys Wet Roof Pro’]({% link 6.1.2.3_Buckleys.md %})
+
+__2. Нахождение мест протечек листовых и мягких кровель.__  
+ВСТАВИТЬ ФОТО  
+*    Визуальное обследование, нахождение причин протечек.   
+*    Инструментальное обследование, которое выполняется после и на основании визуального осмотра.
+
+__3. Качество монтажа кровельных материалов.__  
+ВСТАВИТЬ ФОТО  
     Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
-4. Определение мест утечки тепла.
+__4. Определение мест утечки тепла.__  
+ВСТАВИТЬ ФОТО   
     Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
-5. Опорные металлические конструкции.
-    Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.
+__5. Опорные металлические конструкции.__  
+    Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
     Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
 
-6. Несущая способность кровли.
+__6. Несущая способность кровли.__  
     Определение несущей способности кровли производится путем комплексного обследования несущих конструкций кровли, определения их прочностных характеристик, конструктивных особенностей и сбора существующих нагрузок. 
 
-7. Деревянная конструкция кровли.
+__7. Деревянная конструкция кровли.__
+ВСТАВИТЬ ФОТО  
     Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
 
-8. Инфракрасная термография.
-    Метод обнаружения скопления влаги под кровельным покрытием. Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими.
-    В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу. 
-    После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать. 
-    Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.
+__8. Инфракрасная термография.__  
+    Метод обнаружения скопления влаги под кровельным покрытием. Метод основан на принципе более медленного изменения температуры материалов, насыщенных водой, по сравнению с сухими.  
+    В дневное время солнечное тепло нагревает поверхность и все, что находится под ними, включая влагу.   
+    После захода солнца и падения температуры воздуха в ночное время, поверхность начинает отдавать тепло и остывать.   
+    Участки более низкой теплоемкости – без воды – остывают быстрее, чем места скопления влаги, что четко идентифицируется тепловизионной съемкой.  
     Во время продолжительной солнечной погоды без осадков, поверхность в утренние часы специально обильно поливается водой, чтобы та проникла через все дефекты и скопилась под поверхностью гидроизоляции. Тепловизором обследуется и снимается вся поверхность сплошным методом с последующей склейкой в панорамные ИК-изображения для четкой идентификации аномалий по месту. Найденные дефекты маркируются и снимаются крупным планом. Указанный метод позволяет с достаточной точностью определить границы зоны проникновения влаги в верхние слои кровельного "пирога", но не дает возможности указать точное место повреждения (протечки).
 
+
+### Что вам даст обследование кровли.
+1. Достоверную информацию, на основании которой вы будете принимать решения.  
+2. Ценную информацию для формирования технического задания.  
+3. На основании полученной информации можно планировать дальнейшую работу.   
+4. Контроль выполненных работ в труднодоступных местах.  
+5. Локализацию мест протечек и мест ремонта.  
+6. Карту протечек.  
+7. Общую картину повреждений, недоделок или качества выполненных работ.  
+8. Понимание фронта работ и необходимости ремонта, восстановления или замене той или иной детали, конструкции или покрытия  .   
+9. Полученная информация поможет сэкономить ваш бюджет.  
+
+
+### Какие документы получаем по окончанию обследования
+__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__ который будет является доказательством, свидетельствующим о наличии / отсутствии интересующих фактических данных в разрешении того или иного вопроса.
+
+Техническое заключение составляется согласно __ГОСТ 31937-2011.__    
+* В которые входят данные осмотра, фото и видео материалы.  
+* В заключении будут отображены выявленные дефекты.   
+* К заключению прилагаются рекомендации по устранению выявленных дефектов.  
+* На бумажном носителе в 2-х (двух) экземплярах.  
+* В электронном виде (сканировании копия в формате PDF).  
+
+*техническое заключение формируется на основании технического задания.
+
+___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
 
