--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -5,3 +5,14 @@ sortid: 3.1
 submenu: true
 ---
 
+<div style="clear:both"></div>
+
+<div uk-slider>
+    <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
+        <% for i in site.collections.gal_3.1.files %>
+        <li>
+            <img src="/gal_3.1/{{ i.name }}">
+        </li>
+        <% endfor %>
+    </ul>
+</div>
