--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -9,10 +9,10 @@ submenu: true
 
 <div uk-slider>
     <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
-        <% for i in site.collections.gal_3.1.files %>
+        {% for i in site.collections.gal_3.1.files %}
         <li>
             <img src="/gal_3.1/{{ i.name }}">
         </li>
-        <% endfor %>
+        {% endfor %}
     </ul>
 </div>
