--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -10,9 +10,9 @@ submenu: true
 <div uk-slider>
     <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
         {% for i in site.static_file %}
-            {% if i.path contains '/img/gal3.1' %}
+            {% if i.path contains '/img/gal3.1/' %}
                 <li>
-                    <img src="/img/gal_3.1/{{ i.name }}" alt="">
+                    <img src="/img/gal3.1/{{ i.name }}" alt="">
                 </li>
             {% endif %}
         {% endfor %}
