--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -7,10 +7,11 @@ submenu: true
 
 <div style="clear:both"></div>
 
-<div uk-slider>
+<div uk-slider="autoplay: true">
     <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
         {% for i in site.static_file %}
-            {% if i.path contains '/img/gal3.1/' %}
+        <!-- {{ i.path }}} -->
+            {% if i.path contains 'img/gal3.1' %}
                 <li>
                     <img src="/img/gal3.1/{{ i.name }}" alt="">
                 </li>
