--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -9,7 +9,7 @@ submenu: true
 
 <div uk-slider="autoplay: true">
     <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
-        {% for i in site.static_file %}
+        {% for i in site.static_files %}
         <!-- {{ i.path }}} -->
             {% if i.path contains 'img/gal3.1' %}
                 <li>
