--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -7,11 +7,10 @@ submenu: true
 
 <div style="clear:both"></div>
 
-<div uk-slider="autoplay: true;autoplay-interval: 1500>
+<div uk-slider="autoplay: true;autoplay-interval: 1500">
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
         <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
             {% for i in site.static_files %}
-            <!-- {{ i.path }}} -->
                 {% if i.path contains 'img/gal3.1' %}
                     <li>
                         <img src="/img/gal3.1/{{ i.name }}" alt="">
