--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -7,19 +7,4 @@ submenu: true
 
 <div style="clear:both"></div>
 
-<div uk-slider="autoplay: true;autoplay-interval: 1500">
-    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-        <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@">
-            {% for i in site.static_files %}
-                {% if i.path contains 'img/gal3.1' %}
-                    <li>
-                        <img src="/img/gal3.1/{{ i.name }}" alt="">
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul>
-        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
-    </div>
-    <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-</div>
+{% include el-slider.html  %}
