--- a/1.4_Tech_conclus.md
+++ b/1.4_Tech_conclus.md
@@ -9,11 +9,11 @@ submenu: true
 
 
 _По результатам обследования составляется отчет о техническом состоянии._  
-В соответствии с __ГОСТ 31937-2011__ "Здания и сооружения". (ссылка на Буфер № 6.1.4.1.) Правила обследования и мониторинга технического состояния" существует 4 категории технического состояния строительных конструкций:
-- Нормативное техническое состояние.
-- Работоспособное техническое состояние.
-- Ограниченно-работоспособное техническое состояние.
-- Аварийное состояние.
+В соответствии с __ГОСТ __[31937-2011]({% link Bufer tekst/6.1.4.1. GOST_31937-2011.pdf %})__ "Здания и сооружения". Правила обследования и мониторинга технического состояния" существует 4 категории технического состояния строительных конструкций:
+* - Нормативное техническое состояние.
+* - Работоспособное техническое состояние.
+* - Ограниченно-работоспособное техническое состояние.
+* - Аварийное состояние.
 
 
 Отчет технического обследования состоит из текстовой части, фотографий, графического материала и приложений, и содержит следующие разделы:
