--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -5,21 +5,22 @@ sortid: 1.5
 submenu: true
 ---
 
-1. Визуальный неразрушающий контроль.
+__1. Визуальный неразрушающий контроль.__   
    Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.
-   Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты. 
-   Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.
-   Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является ГОСТ 23479-79 (ссылка на Буфер № 6.1.4.1.) «Контроль неразрушающий. Методы оптического вида» и РД 03-606-03. (ссылка на Буфер № 6.1.4.3.)
+   Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.    
+   Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.   
+   Проведение визуального неразрушающего контроля регламентируется согласно федеральной нормативно-технической документации и базируется на правилах безопасности Ростехнадзора. Основополагающим, в данном случае, является **ГОСТ** __[23479-79]({% link Bufer tekst/ГОСТ 23479-79.pdf %})__  «Контроль неразрушающий. Методы оптического вида» и **РД** __[03-606-03]({% link Bufer tekst/РД 03-606-03.pdf %})__ 
 
-2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %}) (вставить фото)
+__2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
+(вставить фото)
  
     Вашему вниманию предоставляем новейший метод нахождения протечек кровли - Электро-векторное картирование, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
     Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
-3. Ультразвуковой неразрушающий контроль.
-    Ультразвуковая толщинометрия – наиболее прогрессивный метод неразрушимого контроля. Позволяет эффективно проводить исследования на различных объектах, без приостановления их эксплуатации, а также при доступе к объекту с одной стороны. Гарантированно даёт результат с минимальной погрешностью. Является безальтернативным методам, если доступ к объекту есть только с одной стороны.
-    Ультразвуковая толщинометрия металла применяется для определения фактической толщины металла. Кроме того, такой метод позволяет определить размеры детали оборудования без их демонтажа. Например, элементы трубопровода, валы, шпильки и т.п. Позволяет досконально изучить различные материалы, сварные швы и соединения и выявить мельчайшие дефекты. 
-    Ультразвуковая толщинометрия проводится в соответствии с ГОСТ Р 55724. (ссылка на Буфер № 6.1.5.1.)
+**3. Ультразвуковой неразрушающий контроль.**   
+    Ультразвуковая толщинометрия – наиболее прогрессивный метод неразрушимого контроля. Позволяет эффективно проводить исследования на различных объектах, без приостановления их эксплуатации, а также при доступе к объекту с одной стороны. Гарантированно даёт результат с минимальной погрешностью. Является безальтернативным методам, если доступ к объекту есть только с одной стороны.   
+    Ультразвуковая толщинометрия металла применяется для определения фактической толщины металла. Кроме того, такой метод позволяет определить размеры детали оборудования без их демонтажа. Например, элементы трубопровода, валы, шпильки и т.п. Позволяет досконально изучить различные материалы, сварные швы и соединения и выявить мельчайшие дефекты.    
+    Ультразвуковая толщинометрия проводится в соответствии с **ГОСТ Р** __[55724]({% link Bufer tekst/ГОСТ Р 55724.pdf %})__    
 
     Ультразвуковой контроль металлоконструкций
     Посредством специального оборудования – дефектоскопа - исследуется прочность изделия, наличие или отсутствие трещин, сколов и прочих дефектов, а также качество сварных швов и соединений. Ультразвуковая дефектоскопия является действенной при выявлении воздушных пустот, химически неоднородного состава (например, шлаковые вложения в металле) и выявления присутствия неметаллических элементов.
@@ -27,7 +28,7 @@ submenu: true
    Проводится сертифицированными специалистами, имеющими II или III уровень квалификации и имеющими право подписи документов.
   -  инструмент-Ультразвуковой дефектоскоп. 
   
-3. Ударно-импульсное исследование прочностных характеристик.
+**4. Ударно-импульсное исследование прочностных характеристик.**      
    Принцип работы ударно-импульсного оборудования заключается в проверке показателей твердости и упругости строительной конструкции с помощью ударного импульса. Для этого проводится серия ударов  в одно место поверхности стройконструкции. Далее прибор производит пересчет полученных значений и определяет средний показатель. На основании полученного показателя и определяется фактическая марка бетона строительной конструкции.
 
 ##### Метод ударного импульса
