--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -5,7 +5,7 @@ sortid: 1.5
 submenu: true
 ---
 
-__1. Визуальный неразрушающий контроль.__   
+**1. Визуальный неразрушающий контроль.**   
    Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.
    Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.    
    Инструменты для проведения визуального и измерительного контроля: увеличительные лупы до 7х, штангенциркуль, рулетку, УШС, угломеры, шаблоны и т.д.   
@@ -13,19 +13,20 @@ __1. Визуальный неразрушающий контроль.__
 
 __2. [Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
 (вставить фото)
- 
-    Вашему вниманию предоставляем новейший метод нахождения протечек кровли - Электро-векторное картирование, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
-    Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
+
+  Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
+    Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. 
+    На сегодняшний день **ЭВК - единственный наиболее эффективный способ** находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
 **3. Ультразвуковой неразрушающий контроль.**   
     Ультразвуковая толщинометрия – наиболее прогрессивный метод неразрушимого контроля. Позволяет эффективно проводить исследования на различных объектах, без приостановления их эксплуатации, а также при доступе к объекту с одной стороны. Гарантированно даёт результат с минимальной погрешностью. Является безальтернативным методам, если доступ к объекту есть только с одной стороны.   
     Ультразвуковая толщинометрия металла применяется для определения фактической толщины металла. Кроме того, такой метод позволяет определить размеры детали оборудования без их демонтажа. Например, элементы трубопровода, валы, шпильки и т.п. Позволяет досконально изучить различные материалы, сварные швы и соединения и выявить мельчайшие дефекты.    
     Ультразвуковая толщинометрия проводится в соответствии с **ГОСТ Р** __[55724]({% link Bufer tekst/ГОСТ Р 55724.pdf %})__    
 
-    Ультразвуковой контроль металлоконструкций
+   **Ультразвуковой контроль металлоконструкций**   
     Посредством специального оборудования – дефектоскопа - исследуется прочность изделия, наличие или отсутствие трещин, сколов и прочих дефектов, а также качество сварных швов и соединений. Ультразвуковая дефектоскопия является действенной при выявлении воздушных пустот, химически неоднородного состава (например, шлаковые вложения в металле) и выявления присутствия неметаллических элементов.
 
-   Проводится сертифицированными специалистами, имеющими II или III уровень квалификации и имеющими право подписи документов.
+   *Проводится сертифицированными специалистами, имеющими II или III уровень квалификации и имеющими право подписи документов.
   -  инструмент-Ультразвуковой дефектоскоп. 
   
 **4. Ударно-импульсное исследование прочностных характеристик.**      
@@ -41,14 +42,14 @@ __2. [Электро-векторное картирование]({% link 6.1.2.
 
    Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
 
-4. Тепловизионное обследование.
-Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с ГОСТ Р 54852-2011 (ссылка на Буфер № 6.1.5.2.) «ЗДАНИЯ И СООРУЖЕНИЯ. МЕТОД ТЕПЛОВИЗИОННОГО КОНТРОЛЯ КАЧЕСТВА ТЕПЛОИЗОЛЯЦИИ ОГРАЖДАЮЩИХ КОНСТРУКЦИЙ», позволяющий найти локализацию мест протечек и утерь тепла, недоступных обнаружением традиционными методами, для дальнейшего их устранения.
+**5. Тепловизионное обследование.**   
+Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** __[54852_2011]({% link Bufer tekst/GOST_R_54852_2011.pdf %})__ «ЗДАНИЯ И СООРУЖЕНИЯ. МЕТОД ТЕПЛОВИЗИОННОГО КОНТРОЛЯ КАЧЕСТВА ТЕПЛОИЗОЛЯЦИИ ОГРАЖДАЮЩИХ КОНСТРУКЦИЙ», позволяющий найти локализацию мест протечек и утерь тепла, недоступных обнаружением традиционными методами, для дальнейшего их устранения.
 
-Область применение тепловизора:
-1) Диагностика дефектов ограждающих конструкций и обеспечение качества строительства (особенно герметичности окон и дверей и.т.д.)
-2) Мониторинг теплопотерь    
-3) Помощь при превентивной диагностике
-   Типичные задачи для тепловизора:
-- Быстрая локализация горячих точек в электрических установках
-- Выявление мест аномального нагрева
+* Область применение тепловизора:  
+1) Диагностика дефектов ограждающих конструкций и обеспечение качества строительства (особенно герметичности окон и дверей и.т.д.).  
+2) Мониторинг теплопотерь.      
+3) Помощь при превентивной диагностике.   
+ * Типичные задачи для тепловизора:
+- Быстрая локализация горячих точек в электрических установках.  
+- Выявление мест аномального нагрева.  
 
